<resources>
    <string name="app_name">AndroidMater</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="Age">Edad</string>
    <string name="calculate">calcular</string>
    <string name="result">tu resultado</string>
    <string name="recalculate">re-calcular</string>
    <string name="error">Error</string>

    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estas por debajo de lo optimo para tu peso y altura</string>

    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estas en lo optimo para tu peso y altura</string>

    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estas por encima de lo optimo para tu peso y altura</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estas MUY por encima de lo optimo para tu peso y altura</string>
</resources>